fix(adminui-vue): replaced overflow popover to el-popover

--- a/packages/adminui-vue/components/tabbar/css/index.css
+++ b/packages/adminui-vue/components/tabbar/css/index.css
@@ -1,5 +1,5 @@
 .ub-tabbar{
-  padding: 12px 16px;
+  padding: 8px;
   display:flex;
   justify-content: space-between;
   background: #fff;
@@ -170,17 +170,21 @@
 }
 
 .ub-tabbar__overflow__tray{
-  position: absolute;
-  top:100%;
-  right:0;
   background-color: #48505e;
-  margin-top: -4px;
   box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.24);
   padding: 8px 0;
+  border: none;
+  line-height: 1;
+}
+
+.ub-tabbar__overflow__tray[x-placement^=bottom] .popper__arrow::after{
+  border-bottom-color: #48505e;
+}
+
+.ub-tabbar__overflow__tabs{
   max-height: 400px;
   overflow-y: auto;
   overflow-x: hidden;
-  z-index: 10;
 }
 
 .ub-tabbar__tab-tray{
